archive and delete task
